@@ -57,7 +57,7 @@ def getMessageStrict():
     m.add_header("In-Reply-To",""""Message from "Test User" <testuser@test.org>    of "Sat, 14 Dec 2002 09:17:00 CST." """)
     m.add_header("Date","Mon, 26 Sep 2005 13:26:39 +0200")
     m.add_header("Subject","""dbmail "test" message""")
-    m.add_header("Message-Id","<1145862946l.21522l.0l@localhost>")
+    m.add_header("Message-Id","""<"114.5862946l.21522l.0l"@localhost>""")
     return m
 
 def getMultiPart():
@@ -219,7 +219,7 @@ class testImapServer(unittest.TestCase):
         self.assertEquals(result[0],'OK')
 
         result = self.o.fetch(id,"(ENVELOPE)")
-        expect = [('1 (ENVELOPE ("Mon, 26 Sep 2005 13:26:39 +0200" {21}','dbmail "test" message'), (' (("somewhere.foo" NIL "somewher" "foo.org")) (("somewhere.foo" NIL "somewher" "foo.org")) (("somewhere.foo" NIL "somewher" "foo.org")) (("test user" NIL "testuser" "foo.org")) ((NIL NIL "somewher" "foo.org")(NIL NIL "other" "bar.org")) NIL {82}', 'Message from "Test User" <testuser@test.org>    of "Sat,\t14 Dec 2002 09:17:00 CST.'), ' "<1145862946l.21522l.0l@localhost>"))']
+        expect = [('1 (ENVELOPE ("Mon, 26 Sep 2005 13:26:39 +0200" {21}','dbmail "test" message'), (' (("somewhere.foo" NIL "somewher" "foo.org")) (("somewhere.foo" NIL "somewher" "foo.org")) (("somewhere.foo" NIL "somewher" "foo.org")) (("test user" NIL "testuser" "foo.org")) ((NIL NIL "somewher" "foo.org")(NIL NIL "other" "bar.org")) NIL {82}', 'Message from "Test User" <testuser@test.org>    of "Sat,\t14 Dec 2002 09:17:00 CST.'), (' {36}', '<"114.5862946l.21522l.0l"@localhost>'), '))']
         self.assertEquals(result[0],'OK')
         self.assertEquals(result[1],expect)
 
